[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
anyhow = { version = "1.0.42" }
serde = { version = "1.0.117", features = ["derive"]}
bincode = { version = "1.3.3" }